--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://kit.fontawesome.com/954f2d2750.js" crossorigin="anonymous"></script>
 </head>
-<body>
+
+<body class="quicksand">
     <header>
 
     </header>
@@ -16,6 +19,7 @@
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
