--- a/index.html
+++ b/index.html
@@ -9,8 +9,42 @@
     <script src="https://kit.fontawesome.com/954f2d2750.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="quicksand">
-    <header>
+<body class="main quicksand">
+    <header class="bg">
+        <nav class="navbar display-flex">
+            <div class="logo display-flex">
+                <img src="assets/logo.png" alt="">
+                <h3 class="brand">SCHOOL</h3>
+            </div>
+            <div id="hamburger"><i class="fa-solid fa-bars"></i></div>
+
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link orange">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link sky-blue">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link paste">Facilities</a></li>
+                <li class="nav-item"><a href="" class="nav-link purple">Admission</a></li>
+            </ul>
+
+            <button class="nav-button">Contact</button>
+           
+
+
+        </nav>
+        <div class="banner display-flex">
+            <div class="banner-content">
+                <h3 class="banner-title"><span class="orange">Empowering</span> <span class="black">students from
+                        small <br>age</span> <span class="sky-blue">towards vision</span></h3>
+                <p class="banner-description black">With the courage, Confidence, Creativity and Compassion to make
+                    their
+                    Unique
+                    Contribution in a
+                    Diverse and Dynamic World.</p>
+                <button class="btn-primary">Enroll Now</button>
+            </div>
+            <img class="banner-image" src="assets/hero-kids.png" alt="">
+
+
+        </div>
 
     </header>
     <main>
