--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
 
             <button class="nav-button">Contact</button>
-           
+
 
 
         </nav>
@@ -48,6 +48,40 @@
 
     </header>
     <main>
+        <section>
+            <h3 class="section-title">Standard Curriculum</h3>
+            <div class="card-container">
+                <div class="card">
+                    <img src="assets/kinder.png" alt="" class="card-icon">
+                    <h4 class="crd-title">Kinder (3-6) Years</h4>
+                    <p class="card-description raleway">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                        <a class="link-1 card-link" href="">Read More</a>
+                </div>
+                <div class="card">
+                    <img src="assets/elementary.png" alt="" class="card-icon">
+                    <h4 class="crd-title">Elementary School</h4>
+                    <p class="card-description raleway">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a class="link-2 card-link" href="">Read More</a>
+                </div>
+                <div class="card">
+                    <img src="assets/middle.png" alt="" class="card-icon">
+                    <h4 class="crd-title"></h4>
+                    <p class="card-description raleway">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                        <a class="link-3 card-link" href="">Read More</a>
+
+                </div>
+            </div>
+            <div class="arrow-btn"><i class="fa-solid fa-circle-chevron-left"></i>
+                <i class="fa-solid fa-circle-chevron-right"></i>
+            </div>
+        </section>
+
 
     </main>
     <footer>
