--- a/index.html
+++ b/index.html
@@ -48,37 +48,38 @@
 
     </header>
     <main>
-        <section>
+    <main class="bg">
+        <section class=" school-category bg-image display-flex">
             <h3 class="section-title">Standard Curriculum</h3>
-            <div class="card-container">
-                <div class="card">
+            <div class="card-container display-flex">
+                <div id="card-1" class="card display-flex">
                     <img src="assets/kinder.png" alt="" class="card-icon">
                     <h4 class="crd-title">Kinder (3-6) Years</h4>
                     <p class="card-description raleway">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                        <a class="link-1 card-link" href="">Read More</a>
+                    <a id="" class=" card-link" href="">Read More</a>
                 </div>
-                <div class="card">
+                <div id="card-2" class="card display-flex">
                     <img src="assets/elementary.png" alt="" class="card-icon">
                     <h4 class="crd-title">Elementary School</h4>
                     <p class="card-description raleway">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <a class="link-2 card-link" href="">Read More</a>
+                    <a id="link-2" class="card-link" href="">Read More</a>
                 </div>
-                <div class="card">
+                <div id="card-3" class="card display-flex">
                     <img src="assets/middle.png" alt="" class="card-icon">
-                    <h4 class="crd-title"></h4>
+                    <h4 class="crd-title">Middle (10-16) Years</h4>
                     <p class="card-description raleway">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                        <a class="link-3 card-link" href="">Read More</a>
-
+                        <a id="link-3" class="card-link" href="">Read More</a>
                 </div>
             </div>
-            <div class="arrow-btn"><i class="fa-solid fa-circle-chevron-left"></i>
-                <i class="fa-solid fa-circle-chevron-right"></i>
+            <div class="arrow orange">
+                <i class="fa-solid fa-circle-chevron-left arrow-btn"></i>
+                <i class="fa-solid fa-circle-chevron-right arrow-btn"></i>
             </div>
         </section>
 
